# deb_packages

./: .travis.yml  BUILD  CHANGELOG.md  Makefile  README.md  WORKSPACE
.travis/: bazel_3.5.1-linux-x86_64.deb.sha256  bazel_3.6.0-linux-x86_64.deb.sha256
deb_packages/: BUILD  defs.bzl  deps.bzl
deb_packages/private/: BUILD  development_defs.bzl  update_deb_packages.bzl
deb_packages/tools/: README.md
deb_packages/tools/update_deb_packages/: update_deb_packages.bzl
deb_packages/tools/update_deb_packages/src/: BUILD  update_deb_packages.go
examples/: WORKSPACE
examples/deb_packages_base/: BUILD  cacerts.bzl
integration_test/: BUILD  WORKSPACE  patch_workspace.sh
integration_test/image/: BUILD
release/: BUILD  development_defs.bzl
test/: BUILD
test/image/: BUILD.bazel
tools/update_deb_packages/: BUILD  update_deb_packages.bzl
tools/update_deb_packages/src/: BUILD
