load("@debian_buster_amd64_pkgs//debs:deb_packages.bzl", "debian_buster_amd64_pkgs")
load("@debian_buster_amd64_pkgs_local_key//debs:deb_packages.bzl",
     "debian_buster_amd64_pkgs_local_key")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

container_image(
    name = "zsh",
    base = "@debian10//image",
    debs = [
        debian_buster_amd64_pkgs["zsh-common"],
        debian_buster_amd64_pkgs["zsh"],
        debian_buster_amd64_pkgs_local_key["libargon2-1"],
    ],
    tags = [
        "deb_packages_auto",
        "zsh_image",
    ],
)
